--- a/front-end/src/Components/Hero/Hero.css
+++ b/front-end/src/Components/Hero/Hero.css
@@ -17,10 +17,24 @@
     font-size: 4em;
     margin-bottom: 10px;
   }
+
+  .hero h2 {
+    font-size: 4em;
+    margin-bottom: 10px;
+    color: white;
+  }
   
   .hero p {
     font-size: 1.5em;
     margin-bottom: 20px;
+    color: black;
+  }
+
+  .highlight {
+    background-color: rgba(255, 255, 255, 0.8); /* Light background */
+    padding: 5px 10px;
+    border-radius: 5px; /* Optional for rounded corners */
+    color: black; /* Text color contrasting the background */
   }
   
   .explore-btn {
