--- a/front-end/src/Components/LocationContact/LocationContact.css
+++ b/front-end/src/Components/LocationContact/LocationContact.css
@@ -1,26 +1,52 @@
 .location-contact {
-    padding: 50px;
-    text-align: center;
-  }
-  
+  background-color: #fff;
+  padding: 50px;
+  text-align: center;
+}
+
+.shop-image {
+  width: 100%;
+  height: auto;
+  margin-bottom: 30px;
+}
+
+.contact-container {
+  display: flex;
+  justify-content: space-around;
+  gap: 50px;
+  margin-top: 20px;
+  flex-wrap: wrap;
+}
+
+.contact-container > div {
+  flex-basis: 30%;
+  min-width: 250px;
+}
+
+.contact-container h3 {
+  font-size: 1.5em;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.contact-container p {
+  font-size: 1.2em;
+  color: #555;
+  line-height: 1.5;
+}
+
+.contact-container p:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+/* Responsive layout */
+@media (max-width: 768px) {
   .contact-container {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
+    flex-direction: column;
+    align-items: center;
   }
-  
-  .location, .contact {
-    width: 40%;
-    background-color: #f4f4f4;
-    padding: 20px;
-    border-radius: 10px;
+
+  .contact-container > div {
+    margin-bottom: 20px;
   }
-  
-  h3 {
-    margin-bottom: 10px;
-  }
-  
-  p {
-    font-size: 1.2em;
-  }
-  
+}
